# Qalam

./: CHANGELOG.md  CMakeLists.txt  DEVELOPMENT_KICKOFF.md  EDITOR_ROADMAP.md  QALAM_ROADMAP_1.md  QALAM_ROADMAP_2.md  QALAM_ROADMAP_3.md  QALAM_ROADMAP_4.md
docs/: README.md
include/: dwrite_api.h  editor.h  qalam.h  terminal.h  ui.h
plans/: QALAM_ANALYSIS.md  SPRINT_1_PLAN.md  TECHNICAL_DECISIONS.md
src/: main.c
src/console/: .gitkeep
src/core/: .gitkeep  buffer.c
src/terminal/: .gitkeep
src/ui/: .gitkeep  dwrite.c  dwrite_impl.cpp  dwrite_internal.h  render.c.bak
tests/: README.md  test_buffer.c  test_dwrite.c
